--- a/src/app.html
+++ b/src/app.html
@@ -1,7 +1,7 @@
 <template>
     <require from="app.css"></require>
     <require from="scrollbox.css"></require>
-    <!--<require from="toastr/build/toastr.min.css"></require>-->
+    <require from="toastr/build/toastr.min.css"></require>
     
     <div css="background-image:url('${theme.files.content_background}'); min-height:${theme.min_height}px;">
         <nav class="navbar navbar-default navbar-fixed-top" role="navigation" style="background-color:white">
