--- a/src/app.html
+++ b/src/app.html
@@ -3,8 +3,8 @@
     <require from="scrollbox.css"></require>
     <require from="toastr/build/toastr.min.css"></require>
     
-    <div css="background-image:url('${theme.files.content_background}'); min-height:${theme.min_height}px;" if.bind="! theme.hide_title">
-        <nav class="navbar navbar-default navbar-fixed-top" role="navigation" style="background-color:white">
+    <div css="background-image:url('${theme.files.content_background}'); min-height:${theme.min_height}px;">
+        <nav class="navbar navbar-default navbar-fixed-top" role="navigation" style="background-color:white" if.bind="! theme.hide_title">
             <div class="container">
                 <div class="navbar-header navbar-right" style="padding-bottom:8px;">
                     <a class="navbar-brand" href="#">
@@ -45,7 +45,7 @@
         <div id="router-view" css="min-height:${router_view_height};">
             <router-view></router-view>
         </div>
-        <footer id="footer">
+        <footer id="footer" if.bind="! theme.hide_title">
             <div class="footer-area">
                 <a style="cursor:pointer; color:gray;" click.delegate="contact_us()">Built by Lifestone</a>
                 <span>${curr_version}</span>
