--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -4,7 +4,7 @@
         <div class="row">
             <div id="breadcrumb" class="col-xs-12 font-size-150" style="background-color:#aaaaaa" dir="rtl">
                 <i class="fa fa-rotate-left pull-left" data-role="button" t="[title]go-back" click.trigger="go_back()"></i>
-                <span if.bind="member.member_info.id">${member.member_info.full_name }</span>
+                <span if.bind="member.member_info.id">${member_full_name }</span>
                 <span if.bind="! member.member_info.id">${'members.new-member' & t }</span>
                 <span style="color:white;font-size:85%;margin-right:30px;"> ${life_cycle_text} </span>
                 <copy-to-clipboard if.bind="user.editing" class="pull-left" content.bind="member_url"></copy-to-clipboard>
@@ -95,7 +95,7 @@
                         </table>
                     </div>
                 </div>
-                <div class="col-md-6" if.bind="user.editing && member" style="padding-right:32px;">
+                <div class="col-md-6" if.bind="user.editing && member" style="padding-right:48px;">
                     <div class="row" dir="rtl">
                         <compose view-model="./member-edit" model.bind="member"></compose>
                     </div>
