interested contacts. link to share.

--- a/src/user/user-mode.html
+++ b/src/user/user-mode.html
@@ -49,6 +49,10 @@
         <i class="fa fa-lg fa-group"></i>
     </a>
 
+    <a href click.delegate="share()" t="[title]user.share" class="border-right">
+        <i class="fa fa-sm fa-link fa-rotate-180"></i>
+    </a>
+
     <div class="btn-group dropdown" aubs-dropdown="auto-close.bind: autoClose; on-toggle.call: toggled(state)" if.bind="user.privileges.HELP_AUTHOR ||user.privileges.ADMIN || user.privileges.DEVELOPER || user.privileges.ACCESS_MANAGER">
         <button class="btn btn-link dropdown-toggle" style="padding: 0;" aubs-dropdown-toggle>
             <i class="fa fa-lg fa-cog"></i>
