interested viewers. wip.

--- a/src/app.html
+++ b/src/app.html
@@ -47,7 +47,7 @@
         </div>
         <footer id="footer" if.bind="! theme.hide_title">
             <div class="footer-area">
-                <a style="cursor:pointer; color:gray;" click.delegate="contact_us()">Built by Lifestone</a>
+                <a style="cursor:pointer;" click.delegate="contact_us()">Built by Lifestone</a>
                 <span>${curr_version}</span>
             </div>
         </footer>
