--- a/src/stories/story-detail.html
+++ b/src/stories/story-detail.html
@@ -32,15 +32,26 @@
                     <div if.bind="! user.editing" class="col-md-5">
                     </div>
                     <div show.bind="members.length>0" class="col-md-7" style="padding-right:36px;">
-                        <span style="float:right">${'stories.associated-members' & t}</span>
+                        <span style="float:right;margin-right:-10px;">${'stories.associated-members' & t}</span>
                     </div>
                 </div>
-                <div if.bind="members.length>0" id="member-list" class="row stories-member-list content-area" style="height:400px;overflow:auto;overflow-x:hidden;">
+                <div if.bind="members.length>0" id="member-list" class="row stories-member-list content-area" style="max-height:400px;overflow:auto;overflow-x:hidden;">
                     <ul class="list-group">
                         <li class="list-group-item" repeat.for="member of members">
                             <a route-href="route: member-details; params.bind: {id:member.id}">
                                 <img src.bind="member.facePhotoURL" />
                                 <h6 dir="${theme.rtltr}" class="list-group-item-heading" >${member.full_name}</h6>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <div if.bind="user.editing && candidates.length>0" id="candidate-list" class="row stories-member-list content-area" style="max-height:400px;overflow:auto;overflow-x:hidden;">
+                    <h3 style="margin-right:40px;">${'photos.candidates' & t}</h3>
+                    <ul class="list-group">
+                        <li class="list-group-item" repeat.for="candidate of candidates">
+                            <a click.delegate="accept_candidate(candidate.id, $index)" style="cursor:pointer;">
+                                <img src.bind="candidate.facePhotoURL" />
+                                <h6 dir="${theme.rtltr}" class="list-group-item-heading" >${candidate.full_name}</h6>
                             </a>
                         </li>
                     </ul>
