--- a/src/members/member-edit.html
+++ b/src/members/member-edit.html
@@ -1,6 +1,13 @@
 <template>
-    <div class="row" style="margin-top: 20px;" dir="rtl">
-        <h3>${'members.editing-member' & t}</h3>
+    <div class="row" style="margin-top: 15px;margin-bottom:10px;" dir="rtl">
+        <div class="col-md-8" if.bind="update_info" style="color: gray;padding-left:5px;padding-top:4px;padding-right:0;">
+            <span style="font-size:18px;">${update_info}</span>
+        </div>
+        <div class="col-md-8" if.bind="! update_info">
+        </div>
+        <div class="col-md-4" style="padding-right:0;">
+            <span style="font-size:22px;">${'members.editing-member' & t}</span>
+        </div>
     </div>
     <div class="row">
         <div class="col-md-6 family-chains">
