--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -7,7 +7,7 @@
                 <h1 if.bind="!caller_type" dir="rtl">${"photos.photos-store" & t}</h1>
             </div>
         </div>-->
-        <div class="row content-area" style="height:380px;width:100%;margin-bottom:24px;margin-top:100px;padding-right:46px;" dir="rtl">
+        <div class="row content-area" style="height:380px;width:100%;margin-bottom:24px;margin-top:100px;padding-right:24px;" dir="rtl">
             <div class="row">
                 <div class="col-md-1" css="padding-top: 40px;position:relative">
                     <span css="position:absolute"></help>${'photos.more' & t}<help topic="photos.slider" position="right"></span>
@@ -84,7 +84,7 @@
                         </span>
                     </div>
                 </div>
-                <div class="col-md-3">
+                <div class="col-md-3" style="padding-right:6px;">
                     <div class="row" style="margin-bottom:15px;position:relative;">
                         <help topic="tags" position="bottom" style="position:absolute;left:2px;top:2px;"></help>
                         <multi-select options.bind="topic_list"
@@ -135,7 +135,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row" style="width:100%;" if.bind="!can_set_dates">
+            <div class="row" style="width:100%;margin-right:-26px;" if.bind="!can_set_dates">
                 <timeline first_year.bind="params.first_year" last_year.bind="params.last_year" change.delegate="time_range_changed($event)"></timeline>
             </div>
         </div>
