--- a/src/resources/elements/chats/chatroom.html
+++ b/src/resources/elements/chats/chatroom.html
@@ -10,12 +10,18 @@
                     <h4 css="width:100%;">${chatroom_name}</h4>
                 </div>
             </form>
-            <div class="row message-collection" >
-                <div class="col-sm-12" scroll-glue style="padding:10px;height:600px;overflow:auto;" id="scroll-area">
+            <div class="row" >
+                <div class="col-sm-12" scroll-glue css="padding:10px;height:${theme.height-411}px;overflow:auto;direction:${theme.rtltr};" ref="scroll_area">
                     <ul class="${theme.rtltr}">
                         <li repeat.for="msg of messages | filter: messages_filter : 'message' : 'sender_name'" style="margin-bottom: 15px;">
-                            <span style="font-weight:bold;">${msg.timestamp}: ${msg.sender_name}</span><br/>
-                            <span innerhtml.bind="msg.message"></span>
+                            <span style="font-weight:bold;">${msg.timestamp}: ${msg.sender_name}
+                                <span if.bind="user.privileges.CHAT_MODERATOR" style="float:left;margin-left:30px;cursor:pointer;">
+                                    <i class="fa fa-pencil" click.delegate="edit_message(msg, $index)" ></i>
+                                    <i class="fa fa-trash" click.delegate="delete_message(msg, $index)" ></i>
+                                </span>
+                            </span><br/>
+                            <span if.bind="msg.id != edited_message_id" innerhtml.bind="msg.message"></span>
+                            <textarea if.bind="msg.id == edited_message_id" rows="3" css="direction:${theme.rtltr};width:100%;" change.delegate="save_edited_message(msg)" value.bind="msg.message"></textarea>
                         </li>
                     </ul>
                 </div>
@@ -24,7 +30,7 @@
         <div class="row">
             <div class="col-md-12">
                 <form role="form" style="padding:12px;">
-                    <textarea rows="3" t="[placeholder]chats.enter-your-message" style="direction:rtl;width:100%;" dir="${theme.rtltr}" value.bind="user_message" ></textarea>
+                    <textarea rows="3" t="[placeholder]chats.enter-your-message" css="direction:${theme.rtltr};width:100%;" dir="${theme.rtltr}" value.bind="user_message" ></textarea>
                     <button class="btn btn-primary btn-block" disabled.bind="user_message==''" click.trigger="send_message()">${'chats.send-message' & t}</button>
                 </form>
             </div>
