--- a/src/resources/elements/chats/chatroom-group.html
+++ b/src/resources/elements/chats/chatroom-group.html
@@ -20,7 +20,7 @@
             <form class="form-horizontal" role="form">
                 <div class="col-md-3" style="margin:5px;">
                     <input style="font-size: 95%;margin-bottom:3px;float: left;width: 200px;height:28px;" dir="rtl" 
-                        type="text" model.bind="new_chatroom_name" placeholder="enter chatroom name" 
+                        type="text" value.bind="new_chatroom_name" placeholder="enter chatroom name" 
                         class="form-control input-small" />
                </div>
             </form>
