api error notifications. adhoc scripts.

--- a/src/admin/adhoc-scripts.html
+++ b/src/admin/adhoc-scripts.html
@@ -1,9 +1,9 @@
 <template>
-    <div class="row" style="padding:15px;width:1200px;margin-left:auto;margin-right:auto;">
-        <div class="col-md-5">
+    <div class="row" style="padding:15px;width:1800px;margin-left:auto;margin-right:auto;">
+        <div class="col-md-5" style="margin-right:-52px">
             <h2 class="center">Script</h2>
             <div class="row toolbar">
-                <div class="col-md-10" style="padding-left:20px">
+                <div class="col-md-10" style="padding-left:20px;">
                     <div class="btn-group" style="margin-bottom:15px;">
                         <button class="btn btn-primary" click.delegate="evaluate_script(code)">
                         Evaluate
