--- a/src/user/user-mode.html
+++ b/src/user/user-mode.html
@@ -63,6 +63,7 @@
             <li if.bind="user.privileges.HELP_AUTHOR"><a class="dropdown-item" href="#" click.trigger="load_help_messages()">Load help messages</a></li>
             <li if.bind="user.privileges.HELP_AUTHOR" class="divider"></li>
             <li if.bind="user.privileges.DEVELOPER"><a class="dropdown-item" href="#" click.trigger="reindex_words()">Reindex Words</a></li>
+            <li if.bind="user.privileges.DEVELOPER"><a class="dropdown-item" href="#" click.trigger="adhoc_scripts()">Ad Hoc Scripts</a></li>
             <li if.bind="user.privileges.ACCESS_MANAGER" t="[title]user.manage-users"><a class="dropdown-item" href="#" click.trigger="manage_users()">Manage Users</a></li>
         </ul>
     </div>
