--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -140,7 +140,7 @@
                         </h4>
                         <i class="fa fa-play fa-lg fa-rotate-180 to-full-page"></i>
                     </div>
-                    <div class="member-story-panel" show.bind="story_4.story_text != ''">
+                    <div class="member-story-panel" show.bind="story_4.story_text != ''" css="height:${story_box_height-85}px;width:256px;">
                         <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story_4.story_text ">
                         </p>
                     </div>
@@ -153,7 +153,7 @@
                         </h4>
                         <i class="fa fa-play fa-lg fa-rotate-180 to-full-page"></i>
                     </div>
-                    <div class="member-story-panel" show.bind="story_3.story_text != ''">
+                    <div class="member-story-panel" show.bind="story_3.story_text != ''" css="height:${story_box_height-85}px;width:256px;">
                         <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story_3.story_text ">
                         </p>
                     </div>
@@ -166,7 +166,7 @@
                         </h4>
                         <i class="fa fa-play fa-lg fa-rotate-180 to-full-page"></i>
                     </div>
-                    <div class="member-story-panel" show.bind="story_2.story_text != ''">
+                    <div class="member-story-panel" show.bind="story_2.story_text != ''" css="height:${story_box_height-85}px;width:256px;">
                         <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story_2.story_text ">
                         </p>
                     </div>
@@ -179,7 +179,7 @@
                         </h4>
                         <i class="fa fa-play fa-lg fa-rotate-180 to-full-page"></i>
                     </div>
-                    <div class="member-story-panel" show.bind="story_1.story_text != ''">
+                    <div class="member-story-panel" show.bind="story_1.story_text != ''" css="height:${story_box_height-85}px;width:256px;">
                         <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story_1.story_text">
                         </p>
                     </div>
