--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -108,13 +108,13 @@
                     <i class="fa fa-expand fa-lg"
                         show.bind="!life_summary_expanded" 
                         style="margin-left:32px;float:left;cursor:pointer;" 
-                        aubs-tooltip="text.bind:to_story_page" 
+                        aubs-tooltip="text.bind:expand" 
                         click.trigger="toggle_life_summary_size($event)">
                     </i>
                     <i class="fa fa-compress fa-lg"
                         show.bind="life_summary_expanded" 
                         style="margin-left:32px;float:left;cursor:pointer;" 
-                        aubs-tooltip="text.bind:to_story_page" 
+                        aubs-tooltip="text.bind:compress" 
                         click.trigger="toggle_life_summary_size($event)">
                     </i>
                     <h3 show.bind="story_0.name || story_0.topic" dir="rtl" style="padding:0;margin:0;margin-bottom:8px;">
