--- a/src/resources/elements/date-range.html
+++ b/src/resources/elements/date-range.html
@@ -1,18 +1,18 @@
 <template>
-    <form class="form-inline date-range" dir="${theme.rtltr}">
+    <form class="form-inline date-range" dir="${theme.rtltr}" style="position:relative;height:34px;">
         <label if.bind="show_label">${label & t}</label>
-        <div if.bind="show_edit_end_date" class="form-group" style="margin-right:0px;width:5em; ">
-            <select value.bind="span_size" style="height:2em;color:black;width:5.2em;" change.delegate="span_size_changed($event)">
+        <div if.bind="show_edit_end_date" class="form-group" style="margin-right:0px;width:5em;position:absolute;top:0;left:98px; ">
+            <select value.bind="span_size" style="height:1.8em;color:black;width:5.2em;" change.delegate="span_size_changed($event)">
                 <option repeat.for="option of end_date_options" model.bind="option.value">${option.name}</option>
             </select>
         </div>
         <div if.bind="!show_edit_end_date" class="form-group" style="margin-right:0px;width:5em; "></div>
  
-        <div class="form-group" if.bind="show_end_date">
+        <div class="form-group" if.bind="show_end_date" style="position:absolute;top:0;left:98px;">
             <span style="padding-top:0.6em;">${end_date_str}</span>
         </div>
 
-        <div class="form-group" if.bind="show_range_labels" style="margin-right:0px;width:1em">
+        <div class="form-group" if.bind="show_range_labels" style="margin-right:0px;width:1em;position:absolute;top:0;left:82px;">
             <span style="padding:0;margin:0;">-</span>
         </div>
 
@@ -20,7 +20,7 @@
             <span></span>
         </div>
 
-        <div if.bind="user.editing" class="form-group" style="margin-right:0px;width:5em;">
+        <div if.bind="user.editing" class="form-group" style="margin-right:0px;width:5em;position:absolute;top:0;left:0;">
             <input type="text" value.bind="base_date_str" maxlength="10" 
                 aubs-tooltip="text.bind:hint"
                 style="width:6.2em;padding-left:0.2em;padding-right:0;color:black;direction:ltr;margin-right:-18px;" 
@@ -28,7 +28,7 @@
                 keypress.trigger="keep_only_good_chars($event)" />
         </div>
 
-        <div class="form-group" if.bind="show_date" style="width:5em;">
+        <div class="form-group" if.bind="show_date" style="width:5em;position:absolute;top:0;left:0;">
             <span style="padding-top:0.6em;">${base_date_str}</span>
         </div>
         <div if.bind="build_now"></div><!--to activate the variable get-->
