--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -26,7 +26,13 @@
                                 <help topic="photos.can-modify-tags", position="bottom"></help>
                             </div>
                             <div class="form-group">
-                                <button if.bind="selected_photos.size > 0" t="[title]photos.download" class="btn btn-basic btn-md"><i class="fa fa-upload fa-rotate-180 -fa-xs"></i></button>
+                                <button if.bind="selected_photos.size > 0" t="[title]photos.download" class="btn btn-basic btn-md" click.delegate="download_photos()"><i class="fa fa-upload fa-rotate-180 fa-xs"></i></button>
+                            </div>
+                            <div class="form-group">
+                                <button if.bind="user.privileges.ADMIN && selected_photos.size > 0" t="[title]photos.delete" class="btn btn-basic btn-md" click.delegate="delete_selected_photos()"><i class="fa fa-trash fa-xs"></i></button>
+                            </div>
+                            <div class="form-group">
+                                <button if.bind="user.privileges.ADMIN && selected_photos.size > 0" t="[title]photos.rotate" class="btn btn-basic btn-md" click.delegate="rotate_selected_photos()"><i class="fa fa-undo fa-xs"></i></button>
                             </div>
                             <div class="form-group" if.bind="phase=='not-editing'">
                                 <help topic="photos-not-editing" position="bottom"></help>
