--- a/src/app.html
+++ b/src/app.html
@@ -1,4 +1,6 @@
 <template>
+    <script id="fr-fek">try{(function (k){localStorage.FEK=k;t=document.getElementById('fr-fek');t.parentNode.removeChild(t);})('OF2C1B4B3nA16B10D8B4F2D4G3I2I3A8ayC-13sumqmc1uA6gB-11m==')}catch(e){}</script>
+    <!--script id="fr-fek1">try{(function (k){localStorage.FEK=k;t=document.getElementById('fr-fek1');t.parentNode.removeChild(t);})('jI2A1C4D5D-17D2E2B1C2E4G1A3B8C7B6ngH-9yB1B-22qE-13F-11==')}catch(e){}</script-->
     <require from="app.css"></require>
     <require from="scrollbox.css"></require>
     <require from="toastr/build/toastr.min.css"></require>
