frkoala license message

--- a/index.html
+++ b/index.html
@@ -2,18 +2,22 @@
 <html>
 
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="expires" content="0">
-  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <meta charset="utf-8">
+    <meta http-equiv="expires" content="0">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
-  <title>Aurelia</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <!--<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>-->
-  <script src="https://use.fontawesome.com/44d9dd0a37.js"></script>
+    <title>Aurelia</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script id="fr-fek">
+        try { (function (k) { localStorage.FEK = k; t = document.getElementById('fr-fek'); t.parentNode.removeChild(t); })('OF2C1B4B3nA16B10D8B4F2D4G3I2I3A8ayC-13sumqmc1uA6gB-11m==') } catch (e) { }
+    </script>
+    <!--script id="fr-fek1">try{(function (k){localStorage.FEK=k;t=document.getElementById('fr-fek1');t.parentNode.removeChild(t);})('jI2A1C4D5D-17D2E2B1C2E4G1A3B8C7B6ngH-9yB1B-22qE-13F-11==')}catch(e){}</script-->
+    <!--<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>-->
+    <script src="https://use.fontawesome.com/44d9dd0a37.js"></script>
 </head>
 
 <body aurelia-app="main">
-  <script src="scripts/vendor-bundle.js" data-main="aurelia-bootstrapper"></script>
+    <script src="scripts/vendor-bundle.js" data-main="aurelia-bootstrapper"></script>
 </body>
 
 </html>
