--- a/src/stories/story_window.html
+++ b/src/stories/story_window.html
@@ -33,6 +33,7 @@
             </div>
             <div class="big-story-panel fr-view" if.bind="edit">
                 <froala-editor value.two-way="story.story_text" config.bind="{
+                    iconsTemplate: 'font_awesome_5',
                     toolbarButtons: ['undo', 'redo', '|', 'bold', 'italic', 'underline', '|', 'insertLink', 'insertImage', 'insertVideo', '|',
                             'color', 'fontSize', 'align', 'html'],
                     fontSize: ['8', '10', '12', '13', '14', '15', '16', '18', '36', '48', '60', '72', '96'],
