--- a/index.html
+++ b/index.html
@@ -11,9 +11,7 @@
     <script id="fr-fek">
         try { (function (k) { localStorage.FEK = k; t = document.getElementById('fr-fek'); t.parentNode.removeChild(t); })('OF2C1B4B3nA16B10D8B4F2D4G3I2I3A8ayC-13sumqmc1uA6gB-11m==') } catch (e) { }
     </script>
-    <!--script id="fr-fek1">try{(function (k){localStorage.FEK=k;t=document.getElementById('fr-fek1');t.parentNode.removeChild(t);})('jI2A1C4D5D-17D2E2B1C2E4G1A3B8C7B6ngH-9yB1B-22qE-13F-11==')}catch(e){}</script-->
-    <!--<script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>-->
-    <script src="https://use.fontawesome.com/44d9dd0a37.js"></script>
+    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-KwxQKNj2D0XKEW5O/Y6haRH39PE/xry8SAoLbpbCMraqlX7kUP6KHOnrlrtvuJLR" crossorigin="anonymous">
 </head>
 
 <body aurelia-app="main">
