--- a/src/photos/full-size-photo.html
+++ b/src/photos/full-size-photo.html
@@ -7,10 +7,10 @@
             <help if.bind="user.editing" topic="annnotated-photo-editing" position="bottom" class="side-tool help"></help>
             <button aubs-tooltip="text.bind:highlight_all" class="side-tool highlighter" id="side-tool highlighter" 
                 click.trigger="toggle_highlighting($event)">
-                <i class="fa fa-lg fa-circle${highlighting ? '' :'-o'}"></i>
+                <i class="fa${highlighting ? '' :'r'} fa-lg fa-circle"></i>
             </button>
             <button aubs-tooltip="text.bind:jump_to_story_page" class="side-tool story" click.trigger="jump_to_photo_page($event)"><i class="fa fa-lg fa-bars"></i></button>
-            <button aubs-tooltip="text.bind:copy_photo_url_text" class="side-tool copy-to-clipboard" click.delegate="copy_photo_url()"><i class="fa fa-lg fa-link fa-rotate-90"></i></button>
+            <button aubs-tooltip="text.bind:copy_photo_url_text" class="side-tool copy-to-clipboard" click.delegate="copy_photo_url()"><i class="fa fa-lg fa-link"></i></button>
             <button dir="rtl" repeat.for="face of faces" click.trigger="handle_face(face, $event, $index)" interact-draggable.bind="theme.interact_setting"
                 class="face" 
                 id.bind="'face-' + face.member_id"
