--- a/src/resources/elements/multi-select.html
+++ b/src/resources/elements/multi-select.html
@@ -53,7 +53,7 @@
                                     <i class="fa fa-${option.sign}-square-o fa-rotate-180 tool"></i>
                                 </a>
                                 <a if.bind="can_edit_name" click.trigger="edit_option(option, $event)">
-                                    <i class="fa fa-pencil fa-rotate-180 fa-rotate-180 tool"></i>
+                                    <i class="fa far-pencil fa-rotate-180 fa-rotate-180 tool"></i>
                                 </a>
                                 <a if.bind="can_delete" click.trigger="remove_option(option, $event)">
                                     <i class="fa fa-trash fa-rotate-180 tool"></i>
