--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 
     <title>Aurelia</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script id="fr-fek">
-        try { (function (k) { localStorage.FEK = k; t = document.getElementById('fr-fek'); t.parentNode.removeChild(t); })('OF2C1B4B3nA16B10D8B4F2D4G3I2I3A8ayC-13sumqmc1uA6gB-11m==') } catch (e) { }
-    </script>
-    <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-KwxQKNj2D0XKEW5O/Y6haRH39PE/xry8SAoLbpbCMraqlX7kUP6KHOnrlrtvuJLR" crossorigin="anonymous">
+    <link rel="stylesheet"
+        href="https://pro.fontawesome.com/releases/v5.0.10/css/all.css" 
+        integrity="sha384-KwxQKNj2D0XKEW5O/Y6haRH39PE/xry8SAoLbpbCMraqlX7kUP6KHOnrlrtvuJLR" 
+        crossorigin="anonymous">
 </head>
 
 <body aurelia-app="main">
