--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="expires" content="0">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 
-    <title>Aurelia</title>
+    <title>סִפּוּרֵי גִּבְעַת בְּרֶנֶר</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script id="fr-fek">
         try { (function (k) { localStorage.FEK = k; t = document.getElementById('fr-fek'); t.parentNode.removeChild(t); })('OF2C1B4B3nA16B10D8B4F2D4G3I2I3A8ayC-13sumqmc1uA6gB-11m==') } catch (e) { }
